[gd_scene load_steps=17 format=2]

[ext_resource path="res://spells/fire/fire3.gd" type="Script" id=1]
[ext_resource path="res://spells/fire/sprites/fireball.png" type="Texture" id=2]
[ext_resource path="res://spells/base_projectile.gd" type="Script" id=3]
[ext_resource path="res://spells/fire/sprites/explosion_atlas_512x512.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.188477 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

resource_local_to_scene = true
render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 0, 2, 0 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 20.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 70.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.2
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Linear Accel", "Radial Accel", "Resource", "Scale", "Spread", "Trail" ]

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 5.0

[sub_resource type="Gradient" id=7]

offsets = PoolRealArray( 0, 0.147929, 0.473373, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.792899, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]

flags = 4
gradient = SubResource( 7 )
width = 2048

[sub_resource type="Curve" id=9]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.779297 ), 0.0, 1.90897, 0, 0, Vector2( 0.844776, 1 ), -1.07802, -1.07802, 0, 0, Vector2( 1, 1 ), 0.12187, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]

flags = 4
width = 2048
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 120.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 1.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 1.0
anim_offset_random = 1.0
anim_loop = false
_sections_unfolded = [ "Animation", "Color", "Emission Shape", "Scale", "Spread", "Trail" ]

[sub_resource type="CircleShape2D" id=12]

custom_solver_bias = 0.0
radius = 166.586

[node name="Fire3" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
has_activation = true
speed = 7
damage = 35
knockback = 70

[node name="Trail" type="Particles2D" parent="." index="0"]

emitting = true
amount = 60
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 1
process_material = SubResource( 5 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Projectile" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Collision" ]
element = 0
level = 3

[node name="Shape" type="CollisionShape2D" parent="Projectile" index="0"]

shape = SubResource( 6 )

[node name="Explosion" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
element = 0
level = 3

[node name="Particles" type="Particles2D" parent="Explosion" index="0"]

z_index = 1
z_as_relative = false
emitting = false
amount = 40
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.6
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 11 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 3
v_frames = 3
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform", "Z Index" ]

[node name="Shape" type="CollisionShape2D" parent="Explosion" index="1"]

shape = SubResource( 12 )
disabled = true

[node name="Lifetime" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="ExplosionDuration" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="FreeTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="area_entered" from="Projectile" to="Projectile" method="_on_Projectile_area_entered"]

[connection signal="body_entered" from="Projectile" to="." method="_on_Projectile_body_entered"]

[connection signal="area_entered" from="Explosion" to="Explosion" method="_on_Projectile_area_entered"]

[connection signal="body_entered" from="Explosion" to="." method="_on_Explosion_body_entered"]

[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]

[connection signal="timeout" from="ExplosionDuration" to="." method="_on_ExplosionDuration_timeout"]

[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]


